--- a/components/src/index.html
+++ b/components/src/index.html
@@ -9,11 +9,15 @@
   
 </head>
 <body>
-  <script>
-    Auth.initV2Provider('a974dfa0-9f57-49b9-95db-90f04ce2111a');
-  </script>
+  <!-- <script>
+    Auth.initV2Provider();
+  </script> -->
+
+  <my-auth name='a974dfa0-9f57-49b9-95db-90f04ce2111a'></my-auth>
   
   <my-component></my-component>
+
+  <my-day></my-day>
 
 </body>
 </html>
