--- a/components/src/index.html
+++ b/components/src/index.html
@@ -15,7 +15,7 @@
 
   <my-auth name='a974dfa0-9f57-49b9-95db-90f04ce2111a'></my-auth>
   
-  <my-component></my-component>
+  <my-login></my-login>
 
   <my-day></my-day>
 
