--- a/M365ToolkitComponents/src/components/graph-login/graph-login.css
+++ b/M365ToolkitComponents/src/components/graph-login/graph-login.css
@@ -141,8 +141,7 @@
     padding: 20px 20px 8px 20px;
 }
 
-.login-menu-user-image,
-.login-menu-user-image .login-user-image {
+.login-menu-user-image {
     height: 65px;
     width: 65px;
 }
