--- a/M365ToolkitComponents/src/components/graph-persona/graph-persona.css
+++ b/M365ToolkitComponents/src/components/graph-persona/graph-persona.css
@@ -1,11 +1,11 @@
 img, svg, .persona-initials-container {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 img {
     border: 0;
-    border-radius: 90px;
+    border-radius: 50%;
 }
 
 .persona-initials-container {
@@ -20,6 +20,7 @@ img {
     vertical-align: baseline;
     text-align: center;
     position: relative;
+    font-family: var(--default-font-family);
 }
 
 .persona-initials-container span {
