--- a/src/components/graph-login/graph-login.scss
+++ b/src/components/graph-login/graph-login.scss
@@ -1,14 +1,10 @@
-import { css } from 'lit-element';
-import { globalStyle } from '../../global/variables.style';
-export const style = [
-    globalStyle,
-    css`
 .login-root {
   position: relative;
   flex: 0 0 auto;
   height: 40;
   box-sizing: border-box;
-  z-index: 200; }
+  z-index: 200;
+}
 
 .login-root-button {
   border: none;
@@ -25,41 +21,50 @@ export const style = [
   font-style: normal;
   font-weight: normal;
   line-height: 20px;
-  font-size: 14px; }
+  font-size: 14px;
+}
 
 .login-root-button:hover {
-  color: var(--default-hover-color); }
+  color: var(--default-hover-color);
+}
 
 .login-root-button:focus {
-  outline: 0; }
+  outline: 0;
+}
 
 .login-signed-out-root {
   display: flex;
   align-items: center;
   height: 40px;
   padding-left: 8px;
-  padding-right: 8px; }
+  padding-right: 8px;
+}
 
 .login-signed-out-content:hover {
-  color: var(--default-hover-color); }
+  color: var(--default-hover-color);
+}
 
 .login-signed-in-root {
   display: flex;
   align-items: center;
-  height: 40px; }
+  height: 40px;
+}
 
 .login-signed-in-root:hover {
-  background-color: rgba(0, 0, 0, 0.1); }
+  background-color: rgba(0, 0, 0, 0.1);
+}
 
 .login-signed-in-image {
   height: 24px;
   width: 24px;
   margin-left: 8px;
-  margin-right: 4px; }
+  margin-right: 4px;
+}
 
 .login-signed-in-content {
   text-align: center;
-  margin-right: 8px; }
+  margin-right: 8px;
+}
 
 .login-header-user-image-container {
   height: 35px;
@@ -67,15 +72,18 @@ export const style = [
   flex: 0 0 auto;
   padding-left: 11px;
   padding-right: 5px;
-  box-sizing: content-box; }
+  box-sizing: content-box;
+}
 
 .login-user-image {
   height: 24px;
   width: 24px;
   border: 0;
-  border-radius: 35px; }
+  border-radius: 35px;
+}
 
 /* menu */
+
 .login-menu-root {
   display: none;
   position: absolute;
@@ -92,18 +100,20 @@ export const style = [
   box-shadow: rgba(0, 0, 0, 0.133) 0px 6.4px 14.4px 0px, rgba(0, 0, 0, 0.11) 0px 1.2px 3.6px 0px;
   border-width: 0px;
   border-style: solid;
-  border-color: #edebe9;
+  border-color: rgb(237, 235, 233);
   outline: transparent;
-  border-radius: 2px; }
+  border-radius: 2px;
+}
 
 .login-menu-root.show-menu {
   display: block;
   top: 50px;
-  animation-name: slidein; }
+  animation-name: slidein;
+}
 
 .login-menu-beak {
   position: absolute;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   box-shadow: inherit;
   box-sizing: border-box;
   transform: rotate(45deg);
@@ -111,7 +121,8 @@ export const style = [
   width: 16px;
   right: 20px;
   top: -8px;
-  border: inherit; }
+  border: inherit;
+}
 
 .login-menu-beak-cover {
   position: absolute;
@@ -119,45 +130,54 @@ export const style = [
   right: 0px;
   bottom: 0px;
   left: 0px;
-  background-color: white;
-  border-radius: 2px; }
+  background-color: rgb(255, 255, 255);
+  border-radius: 2px;
+}
 
 .login-menu-content {
   display: flex;
   flex-direction: column;
   background: white;
-  padding: 20px 20px 8px 20px; }
+  padding: 20px 20px 8px 20px;
+}
 
 .login-menu-user-image {
   height: 65px;
-  width: 65px; }
+  width: 65px;
+}
 
 .login-menu-user-profile {
   display: flex;
   align-items: center;
   margin-bottom: 16px;
-  z-index: 2; }
+  z-index: 2;
+}
 
 .login-menu-user-details {
   display: flex;
   flex-direction: column;
-  margin-left: 14px; }
+  margin-left: 14px;
+}
 
 .login-menu-user-display-name {
   font-size: 18px;
   font-weight: 600;
   line-height: 20px;
-  color: #000011; }
+  color: #000011;
+}
 
 .login-menu-user-email {
   font-size: 15px;
   line-height: 20px;
-  color: #5e5e5e; }
+  color: #5e5e5e;
+}
 
+// .login-menu-commands {}
 .login-menu-commands ul {
   list-style-type: none;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+}
 
 .login-menu-command {
   border: none;
@@ -174,12 +194,14 @@ export const style = [
   font-style: normal;
   font-weight: normal;
   line-height: 20px;
-  font-size: 13px; }
+  font-size: 13px;
+}
 
 @keyframes slidein {
   from {
-    opacity: 0; }
+    opacity: 0;
+  }
   to {
-    opacity: 1; } }
-
-`];
+    opacity: 1;
+  }
+}
