--- a/src/components/graph-persona/graph-persona.scss
+++ b/src/components/graph-persona/graph-persona.scss
@@ -1,17 +1,14 @@
-import { css } from 'lit-element';
-import { globalStyle } from '../../global/variables.style';
-export const style = [
-    globalStyle,
-    css`
 img,
 svg,
 .persona-initials-container {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
 
 img {
   border: 0;
-  border-radius: 50%; }
+  border-radius: 50%;
+}
 
 .persona-initials-container {
   height: 100%;
@@ -25,13 +22,13 @@ img {
   vertical-align: baseline;
   text-align: center;
   position: relative;
-  font-family: var(--default-font-family); }
+  font-family: var(--default-font-family);
+}
 
 .persona-initials-container span {
   vertical-align: baseline;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); }
-
-`];
+  transform: translate(-50%, -50%);
+}
