Reference Fabric mixins & varibles.

--- a/src/components/mgt-agenda/mgt-agenda.scss
+++ b/src/components/mgt-agenda/mgt-agenda.scss
@@ -1,3 +1,4 @@
+@import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
 .agenda-list {
   list-style-type: none;
   padding: 0;
