--- a/src/components/mgt-login/mgt-login.scss
+++ b/src/components/mgt-login/mgt-login.scss
@@ -1,3 +1,4 @@
+@import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
 .login-root {
   position: relative;
   flex: 0 0 auto;
@@ -40,8 +41,11 @@
   padding-right: 8px;
 }
 
-.login-signed-out-content:hover {
-  color: var(--default-hover-color);
+.login-signed-out-content {
+  @include ms-fontColor-themePrimary;
+  &:hover {
+    color: var(--default-hover-color);
+  }
 }
 
 .login-signed-in-root {
