--- a/src/components/mgt-login/mgt-login.scss
+++ b/src/components/mgt-login/mgt-login.scss
@@ -14,7 +14,7 @@
   position: relative;
 }
 
-.sign-in-button {
+.login-button {
   display: flex;
   align-items: center;
   font-size: var(--font-size);
@@ -37,7 +37,7 @@
   }
 }
 
-.sign-in-icon {
+.login-icon {
   margin-top: 2px;
   &+span {
     margin-left: 6px;
@@ -66,52 +66,27 @@
 
 /* menu */
 
-.login-menu-root {
+.login-popup {
   display: none;
   position: absolute;
-  right: 12px;
+  top: 0;
+  right: 0;
   animation-duration: 200ms;
   animation-name: slideout;
-  color: #000000;
   font-family: var(--default-font-family);
   font-size: 14px;
   box-sizing: border-box;
-  box-shadow: rgba(0, 0, 0, 0.133) 0px 6.4px 14.4px 0px, rgba(0, 0, 0, 0.11) 0px 1.2px 3.6px 0px;
-  border-width: 0px;
+  box-shadow: 0 12px 40px 2px rgba(0, 0, 0, 0.08);
+  border-width: 0;
   border-style: solid;
   border-color: rgb(237, 235, 233);
   outline: transparent;
   border-radius: 2px;
   min-width: 240px;
-}
-
-.login-menu-root.show-menu {
-  display: block;
-  top: 52px;
-  animation-name: slidein;
-}
-
-.login-menu-beak {
-  position: absolute;
-  background-color: rgb(255, 255, 255);
-  box-shadow: inherit;
-  box-sizing: border-box;
-  transform: rotate(45deg);
-  height: 16px;
-  width: 16px;
-  right: 20px;
-  top: -8px;
-  border: inherit;
-}
-
-.login-menu-beak-cover {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgb(255, 255, 255);
-  border-radius: 2px;
+  &.show-menu {
+    display: block;
+    animation-name: slidein;
+  }
 }
 
 .login-menu-content {
