--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -1,14 +1,39 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
+:host {
+  --font-size: #{$ms-font-size-m};
+  --font-weight: #{$ms-font-weight-semibold};
+  --color: #{$ms-color-neutralDark};
+}
+
 img,
 svg,
 .person-initials-container {
-  width: 100%;
-  height: 100%;
+  width: 24px;
+  height: 24px;
 }
 
 img {
   border: 0;
   border-radius: 50%;
+}
+
+.root {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-family: var(--default-font-family);
+}
+
+.user-avatar {
+  width: 24px;
+  height: 24px;
+  margin-right: 6px;
+}
+
+.user-name {
+  font-size: var(--font-size);
+  font-weight: var(--font-weight);
+  white-space: nowrap;
 }
 
 .person-initials-container {
