Updated login & person styling.

--- a/index.css
+++ b/index.css
@@ -1,1 +1,5 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
+
+mgt-login {
+  float: right;
+}
