--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -1,4 +1,5 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
+
 :host {
   --font-size: #{$ms-font-size-m};
   --font-weight: #{$ms-font-weight-semibold};
@@ -19,21 +20,30 @@ img {
 
 .root {
   position: relative;
-  display: flex;
+  display: grid;
+  grid-auto-rows: minmax(0, auto);
   align-items: center;
   font-family: var(--default-font-family);
 }
 
 .user-avatar {
-  width: 24px;
-  height: 24px;
   margin-right: 6px;
+  grid-column: 1;
+
+  &.row-span-2 {
+    grid-row: 1 / 3;
+  }
+
+  &.row-span-3 {
+    grid-row: 1 / 4;
+  }
 }
 
 .user-name {
   font-size: var(--font-size);
   font-weight: var(--font-weight);
   white-space: nowrap;
+  grid-column: 2;
 }
 
 .person-initials-container {
