--- a/src/components/mgt-login/mgt-login.scss
+++ b/src/components/mgt-login/mgt-login.scss
@@ -9,6 +9,7 @@
   --color: #{$ms-color-neutralDark};
   --background-color: transparent;
   --background-color--hover: #{$ms-color-neutralLight};
+  --popup-content-background-color: white;
   --popup-command-font-size: #{$ms-font-size-s};
 }
 
@@ -66,13 +67,13 @@
 .popup-content {
   display: flex;
   flex-direction: column;
-  background: white;
-  padding: 20px 20px 8px 20px;
+  background: var(--popup-content-background-color);
+  padding: 24px 24px 16px;
 }
 
 .popup-commands ul {
   list-style-type: none;
-  margin-top: 16px;
+  margin: 16px 0 0;
   padding: 0;
 }
 
