--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -4,13 +4,16 @@
   --font-size: #{$ms-font-size-m};
   --font-weight: #{$ms-font-weight-semibold};
   --color: #{$ms-color-neutralDark};
+  --email-font-size: #{$ms-font-size-s};
+  --email-color: #{$ms-color-neutralPrimary};
+  --avatar-size--s: 24px;
+  --avatar-size: 48px;
 }
 
-img,
 svg,
 .person-initials-container {
-  width: 24px;
-  height: 24px;
+  width: var(--avatar-size--s);
+  height: var(--avatar-size--s);
 }
 
 img {
@@ -27,8 +30,16 @@ img {
 }
 
 .user-avatar {
-  margin-right: 6px;
   grid-column: 1;
+  width: var(--avatar-size);
+  height: var(--avatar-size);
+  margin-right: 12px;
+
+  &.small {
+    margin-right: 6px;
+    width: var(--avatar-size--s);
+    height: var(--avatar-size--s);
+  }
 
   &.row-span-2 {
     grid-row: 1 / 3;
@@ -42,6 +53,13 @@ img {
 .user-name {
   font-size: var(--font-size);
   font-weight: var(--font-weight);
+  white-space: nowrap;
+  grid-column: 2;
+}
+
+.user-email {
+  color: var(--email-color);
+  font-size: var(--email-font-size);
   white-space: nowrap;
   grid-column: 2;
 }
