--- a/src/components/mgt-agenda/mgt-agenda.scss
+++ b/src/components/mgt-agenda/mgt-agenda.scss
@@ -1,4 +1,5 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
+
 .agenda-list {
   list-style-type: none;
   padding: 0;
@@ -42,11 +43,12 @@
 }
 
 .event-attendie-list {
-  padding: 0px;
-  margin: 12px 0px 0px 0px;
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 12px 0 0 0;
 }
 
 .event-attendie {
-  display: inline-block;
-  margin: 0px 6px 0px 0px;
+  margin: 0 6px 12px 0;
 }
