--- a/src/components/mgt-login/mgt-login.scss
+++ b/src/components/mgt-login/mgt-login.scss
@@ -68,7 +68,7 @@
   display: flex;
   flex-direction: column;
   background: var(--popup-content-background-color);
-  padding: 24px 24px 16px;
+  padding: 24px 48px 16px 24px;
 }
 
 .popup-commands ul {
