--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -8,6 +8,8 @@
   --email-color: #{$ms-color-neutralPrimary};
   --avatar-size--s: 24px;
   --avatar-size: 48px;
+  --avatar-font-size--s: 16px;
+  --avatar-font-size: 32px;
   --initials-color: white;
   --initials-background-color: #{$ms-color-magenta};
 }
@@ -49,6 +51,25 @@ img {
     margin-right: 6px;
     width: var(--avatar-size--s);
     height: var(--avatar-size--s);
+  }
+
+  &.row-span-2 {
+    grid-row: 1 / 3;
+  }
+
+  &.row-span-3 {
+    grid-row: 1 / 4;
+  }
+}
+
+.avatar-icon {
+  grid-column: 1;
+  font-size: var(--avatar-font-size);
+  margin-right: 12px;
+
+  &.small {
+    margin-right: 6px;
+    font-size: var(--avatar-font-size--s);
   }
 
   &.row-span-2 {
