--- a/src/components/ui/mgt-agenda/mgt-agenda.scss
+++ b/src/components/ui/mgt-agenda/mgt-agenda.scss
@@ -1,4 +1,5 @@
-@import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
+@import "../shared/shared_style.scss";
+@import "../../../../node_modules/office-ui-fabric-core/dist/sass/References";
 
 .agenda-list {
   list-style-type: none;
