--- a/src/components/mgt-agenda/mgt-agenda.scss
+++ b/src/components/mgt-agenda/mgt-agenda.scss
@@ -1,5 +1,5 @@
 @import "../shared/shared_style.scss";
-@import "../../../../node_modules/office-ui-fabric-core/dist/sass/References";
+@import "../../../node_modules/office-ui-fabric-core/dist/sass/References";
 
 .agenda-list {
   list-style-type: none;
