--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -1,5 +1,5 @@
 @import "../shared/shared_style.scss";
-@import "../../../../node_modules/office-ui-fabric-core/dist/sass/References";
+@import "../../../node_modules/office-ui-fabric-core/dist/sass/References";
 
 :host {
   --font-size: #{$ms-font-size-m};
