--- a/src/components/mgt-login/mgt-login.scss
+++ b/src/components/mgt-login/mgt-login.scss
@@ -1,4 +1,5 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
+@import "../../styles/shared-styles.scss";
 
 :host {
   --font-size: #{$ms-font-size-m};
