--- a/src/components/mgt-agenda/mgt-agenda.scss
+++ b/src/components/mgt-agenda/mgt-agenda.scss
@@ -1,4 +1,5 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
+@import "../../styles/shared-styles.scss";
 
 .agenda-list {
   list-style-type: none;
