--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -1,4 +1,5 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
+@import "../../styles/shared-styles.scss";
 
 :host {
   --font-size: #{$ms-font-size-m};
@@ -27,13 +28,16 @@ img {
 .root {
   position: relative;
   display: grid;
+  display: -ms-grid;
   align-items: center;
   grid-template-columns: auto 1fr;
+  -ms-grid-columns: auto 1fr;
   font-family: var(--default-font-family);
 }
 
 .user-avatar {
   grid-column: 1;
+  -ms-grid-column: 1;
   width: var(--avatar-size);
   height: var(--avatar-size);
   margin-right: 12px;
@@ -56,15 +60,20 @@ img {
 
   &.row-span-2 {
     grid-row: 1 / 3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
   }
 
   &.row-span-3 {
     grid-row: 1 / 4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 3;
   }
 }
 
 .avatar-icon {
   grid-column: 1;
+  -ms-grid-column: 1;
   font-size: var(--avatar-font-size);
   margin-right: 12px;
 
@@ -75,10 +84,14 @@ img {
 
   &.row-span-2 {
     grid-row: 1 / 3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
   }
 
   &.row-span-3 {
     grid-row: 1 / 4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 3;
   }
 }
 
@@ -87,6 +100,7 @@ img {
   font-weight: var(--font-weight);
   white-space: nowrap;
   grid-column: 2;
+  -ms-grid-column: 2;
 }
 
 .user-email {
@@ -94,4 +108,6 @@ img {
   font-size: var(--email-font-size);
   white-space: nowrap;
   grid-column: 2;
+  -ms-grid-column: 2;
+  -ms-grid-row: 2
 }
