--- a/src/components/mgt-login/mgt-login.scss
+++ b/src/components/mgt-login/mgt-login.scss
@@ -16,6 +16,7 @@
 
 .root {
   position: relative;
+  display: inline-block;
 }
 
 .login-button {
@@ -52,8 +53,6 @@
 .popup {
   display: none;
   position: absolute;
-  top: 0;
-  right: 0;
   animation-duration: 300ms;
   font-family: var(--default-font-family);
   background: var(--popup-content-background-color);
@@ -62,8 +61,12 @@
   z-index: 1;
 
   &.show-menu {
-    display: block;
+    display: inline-block;
     animation-name: fade-in;
+  }
+
+  &.open-left {
+    right: 0;
   }
 }
 
