Added Task removal to Tasks component

--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -131,3 +131,9 @@
 .Task .TaskDetails mgt-person {
   display: inline-block;
 }
+
+.Task .TaskDelete {
+  cursor: pointer;
+  user-select: none;
+  margin: 0 10px 0 0;
+}
