--- a/src/components/mgt-dot-options/mgt-dot-options.scss
+++ b/src/components/mgt-dot-options/mgt-dot-options.scss
@@ -1,3 +1,44 @@
 @import "../../styles/shared-styles.scss";
 @import "../../../node_modules/office-ui-fabric-core/dist/sass/References";
 
+:host {
+  font-family: "Segoe UI";
+}
+
+.DotIcon {
+  font-family: "FabricMDL2Icons";
+}
+
+.Menu {
+  position: absolute;
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 40px 5px;
+  background: #ffffff;
+  z-index: 1;
+  display: none;
+  color: black;
+  white-space: nowrap;
+  transform: translateX(-50px);
+}
+
+.DotMenu.Open .Menu {
+  display: block;
+}
+
+.DotMenu .DotItem {
+  direction: ltr;
+  text-align: left;
+  padding: 10px 10px 8px 10px;
+  border: solid 1px rgba(0, 0, 0, 0);
+}
+
+.DotMenu .DotItem:hover {
+  border-color: #8b8b8b;
+}
+
+.DotMenu .DotItem:active {
+  background: #f5f5f5;
+}
+
+.DotMenu .DotItemName {
+  direction: rtl;
+}
