Added drop-down arrow menu to Tasks

--- a/src/components/mgt-dot-options/mgt-dot-options.scss
+++ b/src/components/mgt-dot-options/mgt-dot-options.scss
@@ -32,11 +32,11 @@
 }
 
 .DotMenu .DotItem:hover {
-  border-color: #8b8b8b;
+  background: #c0c0c0;
 }
 
 .DotMenu .DotItem:active {
-  background: #f5f5f5;
+  background: #d8d8d8;
 }
 
 .DotMenu .DotItemName {
