--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -16,6 +16,8 @@
   align-self: center;
   vertical-align: middle;
   user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 :host .Tasks {
@@ -66,11 +68,14 @@
   align-self: center;
   vertical-align: middle;
 
-  border: solid 1px rgba(0,0,0,0);
+  border: solid 1px rgba(0, 0, 0, 0);
   background: #0078d4;
   color: #ffffff;
 
   user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+
   cursor: default;
 }
 
@@ -104,6 +109,7 @@
 .Task .TaskDetails {
   display: flex;
   width: fit-content;
+  width: -moz-fit-content;
   align-content: center;
   align-items: center;
   justify-content: center;
@@ -158,7 +164,16 @@
   flex: 0 0 none;
   color: white;
   cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-items: center;
+  justify-content: center;
+
   user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .Task.Complete .TaskCheckCont,
@@ -171,8 +186,13 @@
   border-color: #00b294;
 }
 
+.Task .TaskCheck {
+  flex: 1 1 auto;
+}
+
 .Task .TaskCheck.Loading {
   color: black;
+  animation: rotateIcon 2s infinite linear;
 }
 
 .Task .TaskTitle {
@@ -203,5 +223,16 @@
 .Task .TaskDelete {
   cursor: pointer;
   user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   margin: 0 10px 0 0;
+}
+
+@keyframes rotateIcon {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
