First pass reworking new task, adding features
Reworked the way adding tasks works and what options you have,
Tweaked ordering of task details,
Made plan detail show when on 'Assigned to me' plan option is selected,

Styling still needs work, but base functionality added

--- a/src/components/mgt-arrow-options/mgt-arrow-options.scss
+++ b/src/components/mgt-arrow-options/mgt-arrow-options.scss
@@ -37,10 +37,9 @@
     -moz-user-select: none;
     -ms-user-select: none;
     display: flex;
-    align-content: center;
     align-items: center;
-    justify-content: center;
-    justify-items: center;
+    justify-content: stretch;
+    justify-items: stretch;
 }
 
 .MenuOption:first {
@@ -58,7 +57,7 @@
 .MenuOptionCheck {
     font-family: "FabricMDL2Icons";
     color: rgba(0,0,0,0);
-    margin: 5px;
+    margin-right: 10px;
 }
 
 .MenuOptionCheck.CurrentValue {
