--- a/src/components/mgt-arrow-options/mgt-arrow-options.scss
+++ b/src/components/mgt-arrow-options/mgt-arrow-options.scss
@@ -1,65 +1,67 @@
 :host {
+  position: relative;
   font-family: "Segoe UI";
   margin: 0 0 12px 0;
 }
 
 .ArrowIcon {
-    font-family: "FabricMDL2Icons";
-    margin: 0 0 0 20px;
-    user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    cursor: pointer;
+  font-family: "FabricMDL2Icons";
+  margin: 0 0 0 20px;
+  user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  cursor: pointer;
 }
 
 .CurrentValue {
-    font-size: 1.3em;
+  font-size: 1.3em;
 }
 
 .Menu {
-    position: absolute;
-    box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 40px 5px;
-    background: #ffffff;
-    z-index: 1;
-    display: none;
-    color: black;
-    white-space: nowrap;
+  position: absolute;
+  left: 0;
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 40px 5px;
+  background: #ffffff;
+  z-index: 1;
+  display: none;
+  color: black;
+  white-space: nowrap;
 }
 
 .Menu.Open {
-    display: block;
+  display: block;
 }
 
 .MenuOption {
-    padding: 20px;
-    cursor: pointer;
-    user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    display: flex;
-    align-items: center;
-    justify-content: stretch;
-    justify-items: stretch;
+  padding: 20px;
+  cursor: pointer;
+  user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
+  justify-items: stretch;
 }
 
 .MenuOption:first {
-    padding: 12px 20px 20px 20px;
+  padding: 12px 20px 20px 20px;
 }
 
 .MenuOption:hover {
-    background: #c0c0c0;
+  background: #c0c0c0;
 }
 
 .MenuOption:active {
-    background: #d8d8d8;
-  }
+  background: #d8d8d8;
+}
 
 .MenuOptionCheck {
-    font-family: "FabricMDL2Icons";
-    color: rgba(0,0,0,0);
-    margin-right: 10px;
+  font-family: "FabricMDL2Icons";
+  color: rgba(0, 0, 0, 0);
+  margin-right: 10px;
 }
 
 .MenuOptionCheck.CurrentValue {
-    color: #0078d4;
+  color: #0078d4;
 }
