added templating helpers

--- a/src/components/mgt-agenda/mgt-agenda.scss
+++ b/src/components/mgt-agenda/mgt-agenda.scss
@@ -43,13 +43,13 @@
   color: rgba(16, 16, 16, 0.4);
 }
 
-.event-attendie-list {
+.event-attendee-list {
   display: flex;
   list-style-type: none;
   padding: 0;
   margin: 12px 0 0 0;
 }
 
-.event-attendie {
+.event-attendee {
   margin: 0 6px 12px 0;
 }
