--- a/src/components/mgt-people/mgt-people.scss
+++ b/src/components/mgt-people/mgt-people.scss
@@ -1,21 +1,22 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import "../../styles/shared-styles.scss";
 
+:host {
+  --list-margin: 8px 0px 8px 8px;
+  --avatar-spacing: 0px 0px 0px 0px;
+}
+
 .people-list {
   list-style-type: none;
+  margin: var(--list-margin);
   padding: 0;
-  margin: 0;
-  color: #000000b7;
   font-family: var(--default-font-family);
   font-style: normal;
   font-weight: normal;
+  display: flex;
 }
 
 .people-person {
-  border-color: rgba(16, 16, 16, 0.3);
-  border-style: solid;
-  border-width: 0px 0px 1px 0px;
-  margin: 8px 8px 0px 8px;
-  padding: 8px 0px;
+  margin: var(--avatar-spacing);
   display: flex;
 }
