Adressing comments and fixed loading from 2 task sources

--- a/src/components/sub-components/mgt-arrow-options/mgt-arrow-options.scss
+++ b/src/components/sub-components/mgt-arrow-options/mgt-arrow-options.scss
@@ -1,3 +1,6 @@
+@import "../../../styles/shared-styles.scss";
+@import "../../../../node_modules/office-ui-fabric-core/dist/sass/References";
+
 :host {
   position: relative;
   font-family: "Segoe UI";
