--- a/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
+++ b/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
@@ -1,5 +1,5 @@
-@import "../../styles/shared-styles.scss";
-@import "../../../node_modules/office-ui-fabric-core/dist/sass/References";
+@import "../../../styles/shared-styles.scss";
+@import "../../../../node_modules/office-ui-fabric-core/dist/sass/References";
 
 :host {
   font-family: "Segoe UI";
