--- a/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
+++ b/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
@@ -6,7 +6,10 @@
 }
 
 .DotIcon {
+  display: inline-block;
   font-family: "FabricMDL2Icons";
+  min-width: 30px;
+  min-height: 30px;
 }
 
 .Menu {
