--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -27,17 +27,18 @@ img {
 
 .root {
   position: relative;
-  display: grid;
-  display: -ms-grid;
+  display: flex;
   align-items: center;
-  grid-template-columns: auto 1fr;
-  -ms-grid-columns: auto 1fr;
   font-family: var(--default-font-family);
 }
 
+.Details {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+}
+
 .user-avatar {
-  grid-column: 1;
-  -ms-grid-column: 1;
   width: var(--avatar-size);
   height: var(--avatar-size);
   margin-right: 12px;
@@ -59,21 +60,20 @@ img {
   }
 
   &.row-span-2 {
-    grid-row: 1 / 3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 2;
+    margin-right: 6px;
+    width: var(--avatar-size);
+    height: var(--avatar-size);
   }
 
   &.row-span-3 {
-    grid-row: 1 / 4;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 3;
+    margin-right: 6px;
+    width: var(--avatar-size);
+    height: var(--avatar-size);
   }
 }
 
 .avatar-icon {
-  grid-column: 1;
-  -ms-grid-column: 1;
+  flex: 1 1 auto;
   font-size: var(--avatar-font-size);
   margin-right: 12px;
 
