--- a/src/components/mgt-agenda/mgt-agenda.scss
+++ b/src/components/mgt-agenda/mgt-agenda.scss
@@ -1,6 +1,14 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
 
+.header {
+  margin: 40px 10px 14px 10px;
+  font-family: var(--default-font-family);
+  font-size: 24px;
+  line-height: 28px;
+  color: #333333;
+}
+
 .agenda-list {
   list-style-type: none;
   padding: 0;
@@ -11,23 +19,27 @@
   font-weight: normal;
 }
 
-.agenda-event {
-  border-color: rgba(16, 16, 16, 0.3);
-  border-style: solid;
-  border-width: 0px 0px 1px 0px;
-  margin: 8px 8px 0px 8px;
-  padding: 8px 0px;
+.event {
+  background: var(--event-background, #ffffff);
+  border: var(--event-border, solid 2px rgba(0, 0, 0, 0));
+  box-shadow: var(--event-box-shadow, 0px 2px 8px rgba(0, 0, 0, 0.092));
+  margin: var(--event-margin, 0px 10px 14px 10px);
+  padding: var(--event-padding, 0px);
   display: flex;
 }
 
 .event-time-container {
   display: flex;
   flex-direction: column;
-  font-size: 10px;
-  color: rgba(16, 16, 16, 0.6);
+  margin: 18px 38px 18px 18px;
+  width: 120px;
+}
+
+.event-time {
+  font-size: 12px;
+  color: #000000;
+  line-height: 16px;
   font-weight: 600;
-  margin: 6px 0px;
-  width: 50px;
 }
 
 .event-duration {
@@ -35,23 +47,38 @@
 }
 
 .event-details-container {
-  margin: 2px 4px 4px 16px;
+  margin: 14px 18px 14px 0px;
+}
+
+.event-subject {
+  margin: 0px 18px 0px 0px;
+  font-size: 19px;
+  line-height: 22px;
+  color: #333333;
+}
+
+.event-location-container {
+  display: flex;
+  margin: 8px 18px 0px 0px;
 }
 
 .event-location {
-  font-size: 10px;
-  color: rgba(16, 16, 16, 0.4);
+  font-size: 12px;
+  line-height: 16px; /* identical to box height */
+  color: #000000;
+  margin: 0px 0px 0px 4px;
 }
 
 .event-attendee-list {
   display: flex;
   list-style-type: none;
   padding: 0;
-  margin: 12px 0 0 0;
+  margin: 8px 0 0 0;
 }
 
 .event-attendee {
-  margin: 0 6px 12px 0;
+  margin: 0px 4px 0px 0px;
+  --avatar-size-s: 20px;
 }
 
 .event-other-container {
