--- a/src/components/mgt-agenda/mgt-agenda.scss
+++ b/src/components/mgt-agenda/mgt-agenda.scss
@@ -4,8 +4,8 @@
 .header {
   margin: var(--agenda-header-margin, 40px 10px 14px 10px);
   font-family: var(--default-font-family);
-  font-size: 24px;
-  color: #333333;
+  font-size: var(--agenda-header-font-size, 24px);
+  color: var(--agenda-header-color, #333333);
 }
 
 .agenda > .group:first-child > .header {
@@ -16,7 +16,6 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
-  color: #000000b7;
   font-family: var(--default-font-family);
   font-style: normal;
   font-weight: normal;
@@ -47,8 +46,8 @@
 }
 
 .event-time {
-  font-size: 12px;
-  color: #000000;
+  font-size: var(--event-time-font-size, 12px);
+  color: var(--event-time-color, #000000);
   font-weight: 600;
 }
 
@@ -66,8 +65,8 @@
 
 .event-subject {
   margin: 0px 18px 0px 0px;
-  font-size: 19px;
-  color: #333333;
+  font-size: var(--event-subject-font-size, 19px);
+  color: var(--event-subject-color, #333333);
 }
 
 .event-location-container {
@@ -76,8 +75,8 @@
 }
 
 .event-location {
-  font-size: 12px;
-  color: #000000;
+  font-size: var(--event-location-font-size, 12px);
+  color: var(--event-location-color, #000000);
   margin: 0px 0px 0px 4px;
 }
 
