--- a/src/components/mgt-people/mgt-people.scss
+++ b/src/components/mgt-people/mgt-people.scss
@@ -1,14 +1,12 @@
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
-@import "../../styles/shared-styles.scss";
+@import '../../styles/shared-styles.scss';
 
-:host {
-  --list-margin: 8px 0px 8px 8px;
-  --avatar-spacing: 0px 0px 0px 0px;
-}
+$list-margin: var(--list-margin, 8px 4px 8px 8px);
+$avatar-spacing: var(--avatar-spacing, 0 4px 0 0);
 
 .people-list {
   list-style-type: none;
-  margin: var(--list-margin);
+  margin: $list-margin;
   padding: 0;
   font-family: var(--default-font-family);
   font-style: normal;
@@ -17,6 +15,6 @@
 }
 
 .people-person {
-  margin: var(--avatar-spacing);
+  margin: $avatar-spacing;
   display: flex;
 }
